--- a/main.html
+++ b/main.html
@@ -8,7 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1> Keerthi</h1>
+	<img src="https://tse1.mm.bing.net/th?id=OIP.yir0s_y4ZBciy9TQFvkPRgHaE8&pid=Api&P=0&h=180">
+   <br>
+	<a href="www.linkedin.com/in/keerthi-naresh-3651b2248">Linkedin Profile</a>
+	<section id="Skills">Java,CSS,HTML,java Script</section>
+	<br>
+	<section id="projects">
+		<ul>
+			<li>Swiggy clone</li>
+			<li>Google Search page clone</li>
+			<li>Zomato web page clone</li>
+		</ul>
+	</section>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
