--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<img src="https://tse1.mm.bing.net/th?id=OIP.yir0s_y4ZBciy9TQFvkPRgHaE8&pid=Api&P=0&h=180">
    <br>
 	<a href="www.linkedin.com/in/keerthi-naresh-3651b2248">Linkedin Profile</a>
-	<section id="Skills">Good Communication Skills</section>
+	<section id="skills">Good Communication Skills</section>
 	<br>
 	<section id="projects">
 		<ul>
